fix broken image link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <div class="image-bg">
                 <img
                   class="profile-image"
-                  src="/images/image-victor.jpg"
+                  src="./images/image-victor.jpg"
                   alt="Profile-image"
                 />
               </div>
